# stac-table

./: .gitignore  .pre-commit-config.yaml  README.md  Untitled.ipynb  pyproject.toml  setup.cfg  stac_table.py  test_stac_table.py
.github/workflows/: continuous-integration.yml  release.yml
examples/fia/: README.md  collection.json  description.md  generate.py  plot.json
examples/gbif/: .gitignore  catalog.json  collection.json  column_descriptions.md  description.md  generate.py  item.json  items.ndjson
examples/gbif/items/: gbif-2021-04-13.json  gbif-2021-06-01.json  gbif-2021-07-01.json  gbif-2021-08-01.json  gbif-2021-09-01.json
examples/us-census/: .gitignore  collection.json  description.md  generate.py
