[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stac_table"
authors = [{name = "Tom Augspurger", email = "taugspurger@microsoft.com"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "dask_geopandas",
    "dask",
    "fsspec",
    "pandas",
    "pyarrow",
    "pystac>=1.1.0",
    "shapely",
]

[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
    "pre-commit"
]
doc = ["sphinx"]